new changes done today base 64, carousel and tooltip

--- a/src/app/auth-temp/temp-signin/temp-signin.component.html
+++ b/src/app/auth-temp/temp-signin/temp-signin.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-sm-12">
       <h1 id="brandLogo" class="text-center"><a><img class="img-ctrl" src="./assets/img/firstdata_logo.svg"></a></h1>
-      
+
       <div class="formWrap ">
         <div class="formWrapInner">
 
@@ -50,7 +50,7 @@
 
                 <button type="submit"
 
-                        class="btnSubmit btn btn-primary btn-lg btn-block"
+                        class="btnSubmit btn btn-primary btn-lg btn-block bg-secondary"
                         [disabled]="!tempSignIn.valid">Sign In
                 </button>
 
