--- a/src/app/dashboard/header/header.component.html
+++ b/src/app/dashboard/header/header.component.html
@@ -32,9 +32,12 @@
         <div class="clearfix"></div>
 
         <div class=" but-wrap d-md-block d-sm-none d-none ">
-          <button id="capital-trigger" type="button" class="btn btn-outline-secondary" class="btn btn-outline-primary" placement="bottom"  triggers="click:blur">Clover Capital</button>
-          <button type="button" class="btn btn-outline-secondary" class="btn btn-outline-primary"   triggers="click:blur" class="btn btn-outline-primary ">Advanced Same Day Funding</button>
-          <div id="capital-tooltip" style="display: none;">Coming Soon</div>
+          <button id="trigger1" type="button" class="btn btn-outline-secondary" class="btn btn-outline-primary" placement="bottom"  triggers="click:blur">Clover Capital</button>
+          <!-- <div id="tp1" style="display: none;">Coming Soon</div> -->
+          <div id="trigger1"><span id="tp1" placement="bottom" style="display: none;">Coming Soon</span></div>
+          <button id="trigger2" type="button" class="btn btn-outline-secondary" class="btn btn-outline-primary" placement="bottom"  triggers="click:blur" class="btn btn-outline-primary ">Advanced Same Day Funding</button>
+          <div id="trigger2"><span id="tp2" placement="bottom" style="display: none;">Coming Soon</span></div>
+          <!-- <div id="tp2" style="display: none;">Coming Soon</div> -->
         </div>
         <div class="icon-wrap  float-right">
           <!--<span class="chatWrap   float-right d-none">-->
