--- a/src/app/dashboard/home/lease-block/lease-block.component.html
+++ b/src/app/dashboard/home/lease-block/lease-block.component.html
@@ -2,7 +2,7 @@
 <div class="lease-prev">Prev</div>
 <div class="lease-next">Next</div>
 
-<div class="your-class" >
+<div class="ca-box-wrap" >
   <div class="  "
   *ngFor="let item of leaseArray; let i=index;"
   [ngClass]="{'leaseCardSelected':selectedLease==i}"
