--- a/src/app/landing-page/land-hero/land-hero.component.html
+++ b/src/app/landing-page/land-hero/land-hero.component.html
@@ -2,7 +2,7 @@
   <div class="col-12 land-hero  ">
     <div class="row">
       <div class="clearfix">
-        <img class="img-fluid" src="./assets/img/hero.png">
+        <img class="img-fluid btn-block" src="./assets/img/hero.png">
       </div>
       <div class=" land-hero-cnt h-100 ">
         <div class="land-hero-cnt-inner">
