--- a/src/app/dashboard/epp/epp.component.css
+++ b/src/app/dashboard/epp/epp.component.css
@@ -8,7 +8,7 @@
     background: #0072ce;
     color:white;}
 
-    .your-class div{
+    .your-epp div{
         padding: 10px;
         border:1px solid red;
         margin: 10px;
@@ -18,5 +18,5 @@
         border: 1px solid green !important;
       }
       .slick-slide{
-        width: 300px;
+        width: 180px;
         }
