--- a/src/assets/css/urLease.css
+++ b/src/assets/css/urLease.css
@@ -790,7 +790,7 @@ input[type=text], input[type=password] {
       font-size: 0.83rem; }
 
 .btmTabCtrl {
-  margin-top: -10px; }
+  margin-top: -20px; }
 
 .icon-wrap {
   position: absolute;
@@ -834,29 +834,27 @@ input[type=text], input[type=password] {
   min-height: calc(100% - 70px) !important;
   margin-bottom: 20px; }
 
-.db-lease-tab-cnt {
-  border: 2px dashed black; }
-  .db-lease-tab-cnt ul {
-    padding: 0px;
-    margin: 0px;
-    list-style-type: none; }
-  .db-lease-tab-cnt ul li {
-    padding: 0px !important;
-    margin: 0px;
-    font-family: SimpleSans-Bold, Helvetica, sans-serif;
-    color: #0072ce;
-    font-size: 10px;
-    font-weight: normal;
-    line-height: normal;
-    font-style: normal;
-    font-stretch: normal;
-    letter-spacing: normal;
-    text-decoration: none;
-    font-family: SimpleSans-Regular, Helvetica, sans-serif;
-    font-size: .83rem;
-    line-height: 1.25rem; }
-    .db-lease-tab-cnt ul li span {
-      font-family: SimpleSans-Bold, Helvetica, sans-serif; }
+.db-lease-tab-cnt ul {
+  padding: 0px;
+  margin: 0px;
+  list-style-type: none; }
+.db-lease-tab-cnt ul li {
+  padding: 0px !important;
+  margin: 0px;
+  font-family: SimpleSans-Bold, Helvetica, sans-serif;
+  color: #0072ce;
+  font-size: 10px;
+  font-weight: normal;
+  line-height: normal;
+  font-style: normal;
+  font-stretch: normal;
+  letter-spacing: normal;
+  text-decoration: none;
+  font-family: SimpleSans-Regular, Helvetica, sans-serif;
+  font-size: .83rem;
+  line-height: 1.25rem; }
+  .db-lease-tab-cnt ul li span {
+    font-family: SimpleSans-Bold, Helvetica, sans-serif; }
 
 #Coverage ul li {
   line-height: 23px; }
@@ -1184,14 +1182,15 @@ input[type=text], input[type=password] {
   cursor: pointer; }
 
 #alertspop, #paymentspop {
-  padding-right: 10px;
-  padding-left: 10px; }
+  padding-right: 15px;
+  padding-left: 15px;
+  padding-top: 10%; }
   #alertspop .modal-dialog, #paymentspop .modal-dialog {
     border-radius: 6px;
     background-color: #ffffff;
     -webkit-box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.5);
             box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.5);
-    margin: 0px !important; }
+    margin: 0 auto; }
   #alertspop .modal-content, #paymentspop .modal-content {
     min-height: 300px; }
   #alertspop .cntWrap, #paymentspop .cntWrap {
@@ -1699,7 +1698,8 @@ ul.lft-icon-wrap li {
   cursor: pointer;
   color: #fff;
   height: 60px;
-  border-bottom: 1px solid darkgray; }
+  border-bottom: 1px solid darkgray;
+  position: relative; }
   ul.lft-icon-wrap li:hover {
     background: #0072ce; }
   ul.lft-icon-wrap li:active {
@@ -1721,8 +1721,7 @@ ul.lft-icon-wrap li.active {
   font-family: SimpleSans-Bold, Helvetica, sans-serif;
   font-size: 1.166rem;
   color: #fff;
-  padding: 15px 0px 0px 15px;
-  border: 1px solid red;
+  padding: 20px 0px 0px 15px;
   display: inline-block; }
 
 .signout-Wrap {
@@ -1891,8 +1890,7 @@ ul.lft-icon-wrap li.active {
   float: left;
   font-size: 1rem;
   font-family: SimpleSans-Regular, Helvetica, sans-serif;
-  font-weight: normal;
-  position: absolute; }
+  font-weight: normal; }
 
 .icnWrap {
   width: 60px;
@@ -1903,7 +1901,7 @@ ul.lft-icon-wrap li.active {
   position: relative; }
   .icnWrap span.nrtitle {
     position: absolute;
-    bottom: 10px;
+    bottom: 6px;
     left: 0px;
     display: inline-block;
     width: 100%;
@@ -1916,9 +1914,14 @@ ul.lft-icon-wrap li.active {
     font-stretch: normal;
     letter-spacing: normal; }
 
+ul.lft-icon-wrap li:nth-child(2) .extitle {
+  top: 15px; }
+
 .sidenav.ctrlWidthLft .extitle {
-  display: block;
-  background-color: red; }
+  display: inline-block;
+  left: 60px;
+  top: 24px;
+  position: absolute; }
 
 .sidenav.ctrlWidthLft .nrtitle {
   display: none; }
@@ -2079,22 +2082,21 @@ input:checked + .slider:before {
     opacity: 1;
     outline: none; }
 
+.db-lease-tab li {
+  margin-bottom: 10px; }
 .db-lease-tab li:nth-child(odd) {
-  border: 1px solid red;
   padding-right: 5px;
   padding-left: 0px; }
 .db-lease-tab li:nth-child(even) {
-  border: 1px solid green;
   padding-left: 5px;
   padding-right: 0px; }
 .db-lease-tab li:nth-child(2) {
-  background: red;
   padding-right: 5px; }
 .db-lease-tab li:nth-child(3) {
   padding-left: 5px; }
 
 .db-lease-tab-btn .row {
-  margin: 0px; }
+  margin: 27px 0px; }
   .db-lease-tab-btn .row > div {
     padding: 0px; }
 .db-lease-tab-btn ul {
@@ -2123,18 +2125,119 @@ input:checked + .slider:before {
       font-stretch: normal;
       letter-spacing: normal; }
 
+.lease-prev, .lease-next {
+  display: none !important; }
+
+.ca-box-wrap .slick-list .slick-slide {
+  height: 120px;
+  border-radius: 5px;
+  background-color: #fff;
+  -webkit-box-shadow: 2px 4px 8px 0 rgba(0, 0, 0, 0.12);
+          box-shadow: 2px 4px 8px 0 rgba(0, 0, 0, 0.12);
+  border: none;
+  width: 180px;
+  margin: 10px;
+  cursor: pointer; }
+  .ca-box-wrap .slick-list .slick-slide.leaseCardSelected {
+    background: #0072ce;
+    outline: none; }
+    .ca-box-wrap .slick-list .slick-slide.leaseCardSelected li label {
+      font-family: SimpleSans-Regular, Helvetica, sans-serif;
+      color: #fff;
+      font-size: 14px;
+      font-weight: normal;
+      line-height: 18px;
+      font-style: normal;
+      font-stretch: normal;
+      letter-spacing: normal; }
+    .ca-box-wrap .slick-list .slick-slide.leaseCardSelected li span {
+      font-family: SimpleSans-Regular, Helvetica, sans-serif;
+      color: #fff;
+      font-size: 14px;
+      font-weight: normal;
+      line-height: 18px;
+      font-style: normal;
+      font-stretch: normal;
+      letter-spacing: normal; }
+    .ca-box-wrap .slick-list .slick-slide.leaseCardSelected:focus {
+      outline: none; }
+  .ca-box-wrap .slick-list .slick-slide > div {
+    height: 100%;
+    position: relative; }
+    .ca-box-wrap .slick-list .slick-slide > div > ul {
+      list-style-type: none;
+      padding-left: 0px; }
+      .ca-box-wrap .slick-list .slick-slide > div > ul li {
+        padding-left: 25px;
+        margin-top: 40px; }
+        .ca-box-wrap .slick-list .slick-slide > div > ul li label {
+          font-family: SimpleSans-Regular, Helvetica, sans-serif;
+          color: #0072ce;
+          font-size: 14px;
+          font-weight: normal;
+          line-height: 18px;
+          font-style: normal;
+          font-stretch: normal;
+          letter-spacing: normal; }
+        .ca-box-wrap .slick-list .slick-slide > div > ul li span {
+          font-family: SimpleSans-Regular, Helvetica, sans-serif;
+          color: #0072ce;
+          font-size: 14px;
+          font-weight: normal;
+          line-height: 18px;
+          font-style: normal;
+          font-stretch: normal;
+          letter-spacing: normal; }
+    .ca-box-wrap .slick-list .slick-slide > div > span {
+      display: inline-block;
+      width: 20px;
+      height: 20px;
+      border-radius: 70px;
+      background: #ff1b1b;
+      font-family: SimpleSans-Regular, Helvetica, sans-serif;
+      color: #fff;
+      font-size: 10px;
+      font-weight: normal;
+      line-height: 18px;
+      font-style: normal;
+      font-stretch: normal;
+      letter-spacing: normal;
+      text-align: center;
+      position: absolute;
+      right: 5px;
+      top: -35px; }
+
+.slick-slide {
+  width: 180px; }
+
+.img-responsive {
+  width: auto; }
+
+#paymentpop a {
+  font-family: SimpleSans-Bold, Helvetica, sans-serif;
+  color: #3e3e3e;
+  font-size: 14px;
+  font-weight: normal;
+  line-height: 18px;
+  font-style: normal;
+  font-stretch: normal;
+  letter-spacing: normal; }
+
+#signWrap button.btn {
+  min-width: 100%; }
+
 /*********************************** sidebar  STARTS here *********************************/
 @media (min-width: 320px) and (max-width: 767.98px) {
+  .db-lease-tab-btn .row {
+    margin: 17px 0px; }
+
   .db-lease-tab li:nth-child(odd) {
-    border: 1px solid red;
     padding-right: 5px;
     padding-left: 0px; }
   .db-lease-tab li:nth-child(even) {
-    border: 1px solid green;
     padding-left: 5px;
     padding-right: 0px; }
   .db-lease-tab li:nth-child(2) {
-    background: red;
     padding-right: 0px !important; }
   .db-lease-tab li:nth-child(3) {
     padding-left: 0px !important; }
@@ -2260,9 +2363,6 @@ input:checked + .slider:before {
 
   .txtInnerWrap {
     padding-top: 30px; }
-
-  .db-bread-wrap {
-    border: 2px dashed black; }
 
   .db-header, .sidenavB {
     top: 60px; }
