--- a/src/app/dashboard/home/lease-tabs/lease-tabs.component.html
+++ b/src/app/dashboard/home/lease-tabs/lease-tabs.component.html
@@ -244,7 +244,7 @@
                       <button id="trigger1" type="button" class="btn roundit" triggers="click:blur">i </button>
                               
                     </td>
-                    <div id="trigger1"><span id="tp1" placement="bottom" style="display: none;">Coming Soon</span></div>
+                    <div id="trigger1"></div><span id="tp1" placement="bottom" style="display: none;">Coming Soon</span>
                     <td>{{ selectedLease['payment']['currentBalance'] | add_comma_pipe }}</td>
                   </tr>
                   <tr class="d-none">
